update with chi 2025 papers

--- a/papers/yeo2025deliberativeness/index.html
+++ b/papers/yeo2025deliberativeness/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Supporting Artefact Awareness in Partially-Replicated Workspaces </title>
+		<title>Enhancing Deliberativeness: Evaluating the Impact of Multimodal Reflection Nudges</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Supporting Artefact Awareness in Partially-Replicated Workspaces </h1>
+						<h1 style="margin: 0 0 0.5em 0">Enhancing Deliberativeness: Evaluating the Impact of Multimodal Reflection Nudges</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
+<span id="yeo2025deliberativeness">ShunYi Yeo, Zhuoqun Jiang, Anthony Tang, and Simon Tangi Perrault. (2025). <span style="text-decoration: underline">Enhancing Deliberativeness: Evaluating the Impact of Multimodal Reflection Nudges</span>. In <i>Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems</i>, Association for Computing Machinery.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Using Cross Reality (CR) approaches for remote collaboration will often result in partially-replicated workspaces. Here, workspace artefacts are not equally accessible—i.e. a physical artefact may only be manipulated by one collaborator—and in general, the artefacts become desynchronised over time. In this paper, we introduce a framework for artefact awareness that can help collaborators main- tain an understanding of each others’ manipulations with workspace artefacts. We illustrate our design explorations through sketches, and outline how we aim to study the effectiveness and utility of artefact awareness in cross reality remote collaboration. In our work, we expect to show that effectively supporting artefact awareness will help make cross-reality remote collaboration smoother.</p>
+<p style="margin: 0.5em 0 1em 0">Nudging participants with text-based reflective nudges enhances deliberation quality on online deliberation platforms. The effectiveness of multimodal reflective nudges, however, remains largely unexplored. Given the multi-sensory nature of human perception, incorporating diverse modalities into self-reflection mechanisms has the potential to better support various reflective styles. This paper explores how presenting reflective nudges of different types (direct: persona and indirect: storytelling) in different modalities (text, image, video and audio) affects deliberation quality. We conducted two user studies with 20 and 200 participants respectively. The first study identifies the preferred modality for each type of reflective nudges, revealing that text is most preferred for persona and video is most preferred for storytelling. The second study assesses the impact of these modalities on deliberation quality. Our findings reveal distinct effects associated with each modality, providing valuable insights for developing more inclusive and effective online deliberation platforms.</p>
 
 <!--
 
@@ -95,27 +95,36 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf)</a><br/>
+
+	<a href="https://doi.org/10.1145/3706598.3714189"><i class="fa fa-sticky-note-o"></i> URL (https://doi.org/10.1145/3706598.3714189)</a><br/>
 
 
-	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i> URL (https://cross-realities.org)</a><br/>
 
-
+	<a href="10.1145/3706598.3714189"><i class="fa fa-external-link"></i> DOI (10.1145/3706598.3714189)</a><br/>
 
 </p>
 
 
+<h2>Keywords</h2>
+<p style="margin: 0.5em 0 1em 0">deliberation, deliberativeness, deliberative quality, internal reflection, online deliberation, public discussions, nudges, indirect reflector, direct reflector, reflection, self-reflection, multimedia, multi-modality, large language model, civic engagement</p>
+
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poh2023artefactawarenessworkshop,<br />
-&nbsp;&nbsp;author = {Poh, Emran and Tang, Anthony and Lee, Jeannie S. and Zhao, Shengdong},<br />
-&nbsp;&nbsp;title = { Supporting Artefact Awareness in Partially-Replicated Workspaces },<br />
-&nbsp;&nbsp;booktitle = {ISMAR23 Workshop: 1st Joint Workshop on Cross Reality},<br />
-&nbsp;&nbsp;editor = {Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph},<br />
-&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf},<br />
-&nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {workshop},<br />
-&nbsp;&nbsp;url = {https://cross-realities.org}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{yeo2025deliberativeness,<br />
+&nbsp;&nbsp;author = {Yeo, ShunYi and Jiang, Zhuoqun and Tang, Anthony and Perrault, Simon Tangi},<br />
+&nbsp;&nbsp;title = {Enhancing Deliberativeness: Evaluating the Impact of Multimodal Reflection Nudges},<br />
+&nbsp;&nbsp;year = {2025},<br />
+&nbsp;&nbsp;isbn = {9798400713941},<br />
+&nbsp;&nbsp;publisher = {Association for Computing Machinery},<br />
+&nbsp;&nbsp;address = {New York, NY, USA},<br />
+&nbsp;&nbsp;url = {https://doi.org/10.1145/3706598.3714189},<br />
+&nbsp;&nbsp;doi = {10.1145/3706598.3714189},<br />
+&nbsp;&nbsp;booktitle = {Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;articleno = {515},<br />
+&nbsp;&nbsp;numpages = {26},<br />
+&nbsp;&nbsp;keywords = {deliberation, deliberativeness, deliberative quality, internal reflection, online deliberation, public discussions, nudges, indirect reflector, direct reflector, reflection, self-reflection, multimedia, multi-modality, large language model, civic engagement},<br />
+&nbsp;&nbsp;series = {CHI '25},<br />
+&nbsp;&nbsp;type = {conference}<br />
 }<br />
 </p>
 					</div>
