--- a/papers/index.html
+++ b/papers/index.html
@@ -125,9 +125,44 @@
 					<div id="content">
 						<!-- Content -->
 						
-<<<<<<< HEAD
 <h1><a name="2025"></a>2025</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/yeo2025deliberativeness"><span id="yeo2025deliberativeness">ShunYi Yeo, Zhuoqun Jiang, Anthony Tang, and Simon Tangi Perrault. (2025). <span style="text-decoration: underline">Enhancing Deliberativeness: Evaluating the Impact of Multimodal Reflection Nudges</span>. In <i>Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems</i>, Association for Computing Machinery.</span>
+
+(conference).</a><br />
+
+
+
+
+
+	<a href="https://doi.org/10.1145/3706598.3714189"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="10.1145/3706598.3714189"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/yeo2025deliberativeness/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/zhang2025embodiedagent"><span id="zhang2025embodiedagent">Tianyi Zhang, Colin Au Yeung, Emily Aurelia, Yuki Onishi, Neil Chulpongsatorn, Jiannan Li, and Anthony Tang. (2025). <span style="text-decoration: underline">Prompting an Embodied AI Agent: How Embodiment and Multimodal Signaling Affects Prompting Behaviour</span>. In <i>Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems</i>, Association for Computing Machinery.</span>
+
+(conference).</a><br />
+
+
+	<small>Notes: Honourable Mention Award (Top 5% of all submissions).</small>
+
+
+	<br />
+
+
+
+	<a href="https://doi.org/10.1145/3706598.3713110"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="10.1145/3706598.3713110"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/zhang2025embodiedagent/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/mahadevan2025imageinthat"><span id="mahadevan2025imageinthat">Karthik Mahadevan, Blaine Lewis, Jiannan Li, Bilge Mutlu, Anthony Tang, and Tovi Grossman. (2025). <span style="text-decoration: underline">ImageInThat: Manipulating Images to Convey User Instructions to Robots</span>. In <i>Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction</i>, IEEE Press, 757–766.</span>
 
 (conference).</a><br />
@@ -256,10 +291,6 @@
 
 </section><a class="details" href="/papers/park2024jollygesture/"><!-- --></a></li>
 <li><section id="citation">
-=======
-<h1><a name="2024"></a>2024</h1>
-<ol class="bibliography"><li><section id="citation">
->>>>>>> 2719e7f4f5daf3bc83a07786b420898663efdd3f
     <a href="/papers/pratte2024hackles"><span id="pratte2024hackles">Sydney Pratt, Anthony Tang, Shannon Hoover, and Lora Oehlberg. (2024). <span style="text-decoration: underline"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </span>. In <i>TEI ’24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 (conference).</a><br />
@@ -274,11 +305,7 @@
 
 
 
-<<<<<<< HEAD
 	<a href="https://doi.org/10.1145/3623509.3633392 "><i class="fa fa-external-link"></i></a>
-=======
-	<a href=" "><i class="fa fa-external-link"></i></a>
->>>>>>> 2719e7f4f5daf3bc83a07786b420898663efdd3f
 
 </section><a class="details" href="/papers/pratte2024hackles/"><!-- --></a></li></ol>
 
