--- a/papers/zhang2025embodiedagent/index.html
+++ b/papers/zhang2025embodiedagent/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Supporting Artefact Awareness in Partially-Replicated Workspaces </title>
+		<title>Prompting an Embodied AI Agent: How Embodiment and Multimodal Signaling Affects Prompting Behaviour</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Supporting Artefact Awareness in Partially-Replicated Workspaces </h1>
+						<h1 style="margin: 0 0 0.5em 0">Prompting an Embodied AI Agent: How Embodiment and Multimodal Signaling Affects Prompting Behaviour</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
+<span id="zhang2025embodiedagent">Tianyi Zhang, Colin Au Yeung, Emily Aurelia, Yuki Onishi, Neil Chulpongsatorn, Jiannan Li, and Anthony Tang. (2025). <span style="text-decoration: underline">Prompting an Embodied AI Agent: How Embodiment and Multimodal Signaling Affects Prompting Behaviour</span>. In <i>Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems</i>, Association for Computing Machinery.</span>
 
+
+	<small>Notes: Honourable Mention Award (Top 5% of all submissions).</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Using Cross Reality (CR) approaches for remote collaboration will often result in partially-replicated workspaces. Here, workspace artefacts are not equally accessible—i.e. a physical artefact may only be manipulated by one collaborator—and in general, the artefacts become desynchronised over time. In this paper, we introduce a framework for artefact awareness that can help collaborators main- tain an understanding of each others’ manipulations with workspace artefacts. We illustrate our design explorations through sketches, and outline how we aim to study the effectiveness and utility of artefact awareness in cross reality remote collaboration. In our work, we expect to show that effectively supporting artefact awareness will help make cross-reality remote collaboration smoother.</p>
+<p style="margin: 0.5em 0 1em 0">Current voice agents wait for a user to complete their verbal instruction before responding; yet, this is misaligned with how humans engage in everyday conversational interaction, where interlocutors use multimodal signaling (e.g. nodding, grunting, or looking at referred to objects) to ensure conversational grounding. We designed an embodied VR agent that exhibits multimodal signaling behaviors in response to situated prompts, by turning its head, or by visually highlighting objects being discussed or referred to. We explore how people prompt this agent to design and manipulate the objects in a VR scene. Through a Wizard of Oz study, we found that participants interacting with an agent that indicated its understanding of spatial and action references were able to prevent errors 30% of the time, and were more satisfied and confident in the agent’s abilities. These findings underscore the importance of designing multimodal signaling communication techniques for future embodied agents.</p>
 
 <!--
 
@@ -95,27 +97,35 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf)</a><br/>
+
+	<a href="https://doi.org/10.1145/3706598.3713110"><i class="fa fa-sticky-note-o"></i> URL (https://doi.org/10.1145/3706598.3713110)</a><br/>
 
 
-	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i> URL (https://cross-realities.org)</a><br/>
 
-
+	<a href="10.1145/3706598.3713110"><i class="fa fa-external-link"></i> DOI (10.1145/3706598.3713110)</a><br/>
 
 </p>
 
 
+<h2>Keywords</h2>
+<p style="margin: 0.5em 0 1em 0">situated prompting, multimodal signaling, common ground, human-ai collaboration</p>
+
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poh2023artefactawarenessworkshop,<br />
-&nbsp;&nbsp;author = {Poh, Emran and Tang, Anthony and Lee, Jeannie S. and Zhao, Shengdong},<br />
-&nbsp;&nbsp;title = { Supporting Artefact Awareness in Partially-Replicated Workspaces },<br />
-&nbsp;&nbsp;booktitle = {ISMAR23 Workshop: 1st Joint Workshop on Cross Reality},<br />
-&nbsp;&nbsp;editor = {Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph},<br />
-&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf},<br />
-&nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {workshop},<br />
-&nbsp;&nbsp;url = {https://cross-realities.org}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{zhang2025embodiedagent,<br />
+&nbsp;&nbsp;author = {Zhang, Tianyi and Au Yeung, Colin and Aurelia, Emily and Onishi, Yuki and Chulpongsatorn, Neil and Li, Jiannan and Tang, Anthony},<br />
+&nbsp;&nbsp;title = {Prompting an Embodied AI Agent: How Embodiment and Multimodal Signaling Affects Prompting Behaviour},<br />
+&nbsp;&nbsp;year = {2025},<br />
+&nbsp;&nbsp;publisher = {Association for Computing Machinery},<br />
+&nbsp;&nbsp;url = {https://doi.org/10.1145/3706598.3713110},<br />
+&nbsp;&nbsp;doi = {10.1145/3706598.3713110},<br />
+&nbsp;&nbsp;booktitle = {Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;articleno = {60},<br />
+&nbsp;&nbsp;numpages = {25},<br />
+&nbsp;&nbsp;keywords = {situated prompting, multimodal signaling, common ground, human-ai collaboration},<br />
+&nbsp;&nbsp;series = {CHI '25},<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;notes = {Honourable Mention Award (Top 5% of all submissions)}<br />
 }<br />
 </p>
 					</div>
